tests/cases/errors/compile_var_no_name.lox
// `var` must be followed by an identifier.
// expect compile error: Expect variable name
var = 1;
